Change project name

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>progettoOOP</name>
+	<name>oop17-DeathRush-Lico-Casini-Ghini-DelGatto</name>
 	<comment></comment>
 	<projects>
 	</projects>
